src/deploy/kubernetes/infra/06_addons/oidc/keycloak/application/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${_Values_app_name}
  namespace: ${_Release_namespace}
  labels:
    app: ${_Values_app_name}
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30100
  - name: https
    port: 8443
    targetPort: 8443
    nodePort: 30101
  selector:
    app: ${_Values_app_name}
  type: NodePort
