src/deploy/kubernetes/infra/06_addons/oidc/keycloak/application/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: ${_Release_namespace}
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

    nginx.ingress.kubernetes.io/rewrite-target: /\$2

spec:
  tls:
    - hosts:
        - ${_Values_host_name}
      secretName: server-certificate-secret
  rules:
    - host: ${_Values_host_name}
      http:
        paths:
          - path: /${_Values_ingress_name}(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ${_Values_app_name}
                port:
                  name: http
